resstructuracion del sitio 2

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -32,7 +32,9 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#page-top">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#sobremi">Sobre Mi</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#asesorias">Asesorias</a></li>
-                        <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="" /></a>
+                        <li class="nav-item">
+                        	<a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="" /></a>
+                        </li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#productos">Productos</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#testimonios">Testimonios</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contacto">Contacto</a></li>
@@ -42,7 +44,7 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead position-relative">
-            <img src="assets/img/logo.svg" class="w-25 position-absolute b-0 l-0">
+            <img src="assets/img/logo.svg" alt="logo" class="w-25 position-absolute b-0 l-0">
             <span class="marcellus position-absolute b-0 r-0 slogan">
                 <span>Guapa</span> 
                 <span>todos</span> 
@@ -60,7 +62,7 @@
                         <span id="title1">Descarga mi ebook</span> <span id="title2">"Guapa todos los dias"</span> <span id="title3">Gratis</span>
                     </div>
                     <div class="col-sm-4" id="ebookDiv">
-                        <form action="" id="ebookForm" novalidate="novalidate" class="my-5 w-90">
+                        <form action="#" id="ebookForm" novalidate="novalidate" class="my-5 w-90">
                             <div class="form-group">
                                 <input class="form-control" id="name" type="text" placeholder="Nombre *" required="required" data-validation-required-message="Ingrese su nombre." >
                             </div>
@@ -68,8 +70,7 @@
                                 <input class="form-control" id="email" type="text" placeholder="Correo Electronico *" required="required" data-validation-required-message="Ingrese su correo.">
                             </div>
                             <div class="text-center">
-                                <div id="success"></div>
-                                <button class="btn btn-primary btn-block text-uppercase" id="sendMessageButton" type="submit">ENVIAR</button>
+                                <button class="btn btn-primary btn-block text-uppercase" type="submit">ENVIAR</button>
                             </div>
                         </form>
                     </div>
@@ -124,20 +125,21 @@
                 <div class="row text-center">
                     <div class="col-md-6 d-flex justify-content-center align-items-center flex-column">
                         <span class="asesorias">
-                            <img src="assets/img/ll.svg">
+                            <img src="assets/img/ll.svg" alt="Ellestylemechellange">
                         </span>
                         <h4 class="my-3">Ellestylemechellange</h4>
                         <p class="text-muted"><span>Es un reto de transformación de imagen en un mes para mujeres que quieren sentirse más seguras, empoderarse a través de la imagen, para lograr sus metas personales.</span></p>
-                        <button class="btn btn-primary btn-block" data-toggle="modal" href="#ellestyle">Ver Más</button>
+                        <a class="btn btn-primary btn-block" data-toggle="modal" href="#ellestyle">Ver Más</a>
                     </div>
                     <div class="col-md-6 d-flex justify-content-center align-items-center flex-column">
                         <span class="asesorias">
-                            <img src="assets/img/ds.svg">
+                            <img src="assets/img/ds.svg" alt="imagenatumedida">
                         </span>
                         <h4 class="my-3">Diseña tu imagen a tu medida</h4>
                         <p class="text-muted"><span>Te sientes segura contigo misma, pero hay ciertas cosas que desconoces acerca de la imagen y te gustaría apréndelas para dominar tu esencia personal?</span></p>
-                        <button class="btn btn-primary btn-block" data-toggle="modal" href="#disena">Ver Más</button>
-                    </div>                </div>
+                        <a class="btn btn-primary btn-block" data-toggle="modal" href="#disena">Ver Más</a>
+                    </div>
+               	</div>
             </div>
         </section>
         <!-- Productos-->
@@ -174,7 +176,7 @@
                 <div class="row">
                     <div class="col-lg-12" id="testimonialsCarousel">
                         <div>
-                            <img src="assets/img/testimonios/karlameneses-min.jpeg" class="img-fluid testimonialsImg">
+                            <img src="assets/img/testimonios/karlameneses-min.jpeg" class="img-fluid testimonialsImg" alt="testimonios">
                             <h2>
                                 Karla Meneses
                             </h2>
@@ -183,7 +185,7 @@
                             </p>
                         </div>
                         <div>
-                            <img src="assets/img/testimonios/kellyherrera-min.jpeg" class="img-fluid testimonialsImg">
+                            <img src="assets/img/testimonios/kellyherrera-min.jpeg" class="img-fluid testimonialsImg" alt="testimonios">
                             <h2>
                                 Kelly Herrera
                             </h2>
@@ -192,7 +194,7 @@
                             </p>
                         </div>
                         <div>
-                            <img src="assets/img/testimonios/darling-min.jpeg" class="img-fluid testimonialsImg">
+                            <img src="assets/img/testimonios/darling-min.jpeg" class="img-fluid testimonialsImg" alt="testimonios">
                             <h2>
                                 Darling Rodriguez
                             </h2>
@@ -201,7 +203,7 @@
                             </p>
                         </div>
                         <div>
-                            <img src="assets/img/testimonios/danielaramirez-min.jpeg" class="img-fluid testimonialsImg">
+                            <img src="assets/img/testimonios/danielaramirez-min.jpeg" class="img-fluid testimonialsImg" alt="testimonios">
                             <h2>
                                 Daniela Ramírez
                             </h2>
@@ -210,7 +212,7 @@
                             </p>
                         </div>
                         <div>
-                            <img src="assets/img/testimonios/lannyespinal-min.jpeg" class="img-fluid testimonialsImg">
+                            <img src="assets/img/testimonios/lannyespinal-min.jpeg" class="img-fluid testimonialsImg" alt="testimonios">
                             <h2>
                                 Lany Espinal
                             </h2>
@@ -219,7 +221,7 @@
                             </p>
                         </div>
                         <div>
-                            <img src="assets/img/testimonios/carolinarojas-min.jpeg" class="img-fluid testimonialsImg">
+                            <img src="assets/img/testimonios/carolinarojas-min.jpeg" class="img-fluid testimonialsImg" alt="testimonios">
                             <h2>
                                 Carolina Rojas
                             </h2>
@@ -228,7 +230,7 @@
                             </p>
                         </div>
                         <div>
-                            <img src="assets/img/testimonios/honadiaz-min.jpeg" class="img-fluid testimonialsImg">
+                            <img src="assets/img/testimonios/honadiaz-min.jpeg" class="img-fluid testimonialsImg" alt="testimonios">
                             <h2>
                                 Hona Díaz
                             </h2>
@@ -237,7 +239,7 @@
                             </p>
                         </div>
                         <div>
-                            <img src="assets/img/testimonios/NhabylaGreige-min.jpeg" class="img-fluid testimonialsImg">
+                            <img src="assets/img/testimonios/NhabylaGreige-min.jpeg" class="img-fluid testimonialsImg" alt="testimonios">
                             <h2>
                                 Nhabyla Greige
                             </h2>
@@ -245,7 +247,7 @@
                                 "Hola bella! Un trabajo impecable, altamente capacitada y preparada y amable atención. 😘😘😘"
                             </p>
                         </div><div>
-                            <img src="assets/img/testimonios/faltanombre-min.jpeg" class="img-fluid testimonialsImg">
+                            <img src="assets/img/testimonios/faltanombre-min.jpeg" class="img-fluid testimonialsImg" alt="testimonios">
                             <h2>
                                 ...
                             </h2>
@@ -253,7 +255,7 @@
                                 "Mi testimonio es genuino, gracias al trabajo impecable que has realizado en las oportunidades que hemos tenido no sólo con la extensión de las pestañas sino con el lifting. Tú profesionalismo siempre a la vanguardia de la excelencia y por ende los productos que usas para trabajar. Muchas gracias por ofrecer tan  extraordinario servicio. Ha sido una grata experiencia. Sin duda eres una referencia local importante."
                             </p>
                         </div><div>
-                            <img src="assets/img/testimonios/MarthaNunez-min.jpeg" class="img-fluid testimonialsImg">
+                            <img src="assets/img/testimonios/MarthaNunez-min.jpeg" class="img-fluid testimonialsImg" alt="testimonios">
                             <h2>
                                 Martha Núñez
                             </h2>
@@ -261,7 +263,7 @@
                                 "Querida Elle Me siento super afortunada de haberte conocido porque más allá de ser la persona ideal para el cuidado de mis Cejas y pestañas donde  deposito toda mi confianza en tus manos porque Con un mucho profesionalismo realizas un trabajo impecable , detallista , con materiales de primera calidad y siempre me dejas una Sonrisa dibujada en la Cara satisfecha por los resultados naturales  delicados que tanto me gustan, puedo agregar que eres una maestra para explicar y asesorar en este tema. Por otro lado debo resaltar que eres una mujer fabulosa por dentro y por fuera en todos los aspectos. Gracias por tu dedicación y que ese rato  Que voy para allá me la paso increíble ... Besitos"
                             </p>
                         </div><div>
-                            <img src="assets/img/testimonios/IreneRosales-min.jpeg" class="img-fluid testimonialsImg">
+                            <img src="assets/img/testimonios/IreneRosales-min.jpeg" class="img-fluid testimonialsImg" alt="testimonios">
                             <h2>
                                 Irene Rosales
                             </h2>
@@ -269,7 +271,7 @@
                                 "Elenny Tu curso de Maquillaje fue genial. Contigo aprendí a maquillarme y cuidar mi piel antes y después del maquillaje. También me coloqué las extensiones de pestañas y me encantaron! muy naturales. Repetiría sin duda alguna. La mejor. Me encantaría tenerte aquí en Espana amiga. Muchísima suerte."
                             </p>
                         </div><div>
-                            <img src="assets/img/testimonios/testi.jpg" class="img-fluid testimonialsImg">
+                            <img src="assets/img/testimonios/testi.jpg" class="img-fluid testimonialsImg" alt="testimonios">
                             <h2>
                                 Shirley Marcano
                             </h2>
@@ -277,7 +279,7 @@
                                 "Elenny hermosa, eres la única persona el cual puedo confiarle mis pestañas, haces magia con ellas y permites que mi mirada sea otra. Haces de lo corriente, perfección. No hay palabras que puedan definir lo increíble que eres en tu labor, dedicada,apasionada, y sobre todo muy responsable! como persona excelente. Tu atención, la mejorrrr, por eso me complace ser tu clienta, y me haría las pestañas contigo una y otra vez. 🙏"
                             </p>
                         </div><div>
-                            <img src="assets/img/testimonios/testi2.jpg" class="img-fluid testimonialsImg">
+                            <img src="assets/img/testimonios/testi2.jpg" class="img-fluid testimonialsImg" alt="testimonios">
                             <h2>
                                 ...
                             </h2>
@@ -475,7 +477,7 @@
         <script src="assets/mail/jqBootstrapValidation.js"></script>
         <script src="assets/mail/contact_me.js"></script>
         <!-- Core theme JS-->
-        <script type="text/javascript" src="js/slick.js"></script>
+        <script src="js/slick.js"></script>
         <script src="js/scripts.js"></script>
     </body>
 </html>
