--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <h2 class="section-heading text-uppercase">Sobre Mi</h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-6"><img src="assets/img/aboutMe.jpg" alt="imageAboutMe" class="img-fluid"></img></div>
+                    <div class="col-lg-6"><img src="assets/img/aboutMe.jpg" alt="imageAboutMe" class="img-fluid"></div>
                     <div class="col-lg-6 aboutMe">
                         <p>
                             Soy <strong>Elle</strong>, <strong>coach de estilo</strong> y me dedico a ayudar a las mujeres a desarrollar su <strong>estilo personal</strong> para lograr independencia personal y profesional por medio de la auto confianza y el bienestar.
@@ -168,7 +168,7 @@
             </div>
         </section>
         <!-- Testimonios-->
-        <section class="page-section py-2 m-0" id="testimonios">
+        <section class="page-section py-5 m-0" id="testimonios">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase textWhite">Testimonios</h2>
